update: readme file